--- a/config.json
+++ b/config.json
@@ -3,4 +3,5 @@
     "subTitle":"一个简单的博客",
     "avatarUrl":"https://i.bobopic.com/tx_bobopic/115861824_touxiang_bobopic.jpg",
     "GMEEK_VERSION":"last"
+    "startSite":"06/23/2024"
 }
