--- a/config.json
+++ b/config.json
@@ -2,6 +2,8 @@
     "title":"数据线blog",
     "subTitle":"一个简单的博客",
     "avatarUrl":"https://i.bobopic.com/tx_bobopic/115861824_touxiang_bobopic.jpg",
-    "GMEEK_VERSION":"last"
-    
-}
+    "startSite":"06/23/2024",
+    "GMEEK_VERSION":"last"   
+}   
+
+
